# agent-skills-updater

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  agent-skills-config.example.yaml  agent-skills-update.ps1  pyproject.toml
.github/workflows/: test.yml
docs/: RELEASE-SETUP.md
src/agent_skills_updater/: __init__.py  backup.py  cli.py  config.py  downloader.py  installer.py  lockfile.py  updater.py
tests/: conftest.py  test_backup.py  test_config.py  test_installer.py  test_lockfile.py  test_updater.py
